Fix configuration card spacing

--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,26 @@
   min-width: 0;
 }
 
+.osc-config-title > .setting-item {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.osc-config-title > .setting-item .setting-item-info {
+  margin: 0;
+}
+
+.osc-config-title > .setting-item .setting-item-name {
+  line-height: 1.2;
+  margin: 0 0 3px;
+}
+
+.osc-config-title .osc-config-description {
+  line-height: 1.25;
+  margin-top: 0;
+}
+
 .osc-config-description.is-empty {
   color: var(--text-faint);
 }
